kafka logic added