@@ -1,21 +1,23 @@
 package dev.ilya_anna.user_service.security;
 
+import dev.ilya_anna.user_service.entities.User;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
 @AllArgsConstructor
 public class DaoUserDetails implements UserDetails {
-    private final String userId;
+    private User user;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
@@ -25,6 +27,6 @@ public class DaoUserDetails implements UserDetails {
 
     @Override
     public String getUsername() {
-        return userId;
+        return user.getId();
     }
 }
